--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,8 @@
 **/dump.rdb
 
 # Blockchain local development
-**/.chaindata 
+**/.chaindata
+
+# Cache files
+**/node_modules/.cache/
+**/.cache/ 
